syntax = "proto3";
import "public/public.proto";
package pbMsg;
option go_package = "github.com/qingw1230/study-im-server/pkg/proto/msg";

message MsgDataToMq{
  string token = 1;
  server_api_params.MsgData msgData = 2;
}

message SendMsgReq {
  string token =1;
  server_api_params.MsgData msgData = 2;
}

message SendMsgResp {
  server_api_params.CommonResp CommonResp = 1;
  string serverMsgId = 2;
  string clientMsgId = 3;
  int64 sendTime = 4;
}

message TestReq {
}

message TestResp {
  string text = 1;
}

service Msg {
  rpc SendMsg(SendMsgReq) returns (SendMsgResp);
  rpc Test(TestReq) returns (TestResp);
}
